[package]
name = "countme"
description = "Counts the number of live instances of types"
version = "2.0.0-pre.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/countme"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[[example]]
name = "print_at_exit"
required-features = ["print_at_exit"]

[[example]]
name = "bench"
required-features = ["enable"]

[dependencies]
dashmap = { version = "4", optional = true }
once_cell = { version = "1.5", optional = true }
rustc-hash = { version = "1.1", optional = true }

[features]
enable = [ "dashmap", "once_cell", "rustc-hash" ]
print_at_exit = ["enable"]
